infrastructure/configs/traefik/dashboard-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-redirect
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/component: dashboard
spec:
  redirectRegex:
    regex: "^https?://traefik\\.macbytes\\.io/?$"
    replacement: "https://traefik.macbytes.io/dashboard/"
    permanent: true
