infrastructure/configs/traefik/flux-operator-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-operator-ingressroute
  namespace: flux-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux.macbytes.io`)
      kind: Rule
      services:
        - name: flux-operator
          port: 9080
  tls:
    secretName: flux-operator-tls-certificate
